@@ -21,9 +21,16 @@ import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.EPackage;
 import org.eclipse.sirius.web.core.api.IEditService;
 import org.eclipse.sirius.web.core.api.IObjectService;
+import org.eclipse.sirius.web.diagrams.Edge;
+import org.eclipse.sirius.web.diagrams.Node;
+import org.eclipse.sirius.web.diagrams.ViewDeletionRequest;
 import org.eclipse.sirius.web.representations.IStatus;
 import org.eclipse.sirius.web.representations.Success;
 import org.eclipse.sirius.web.representations.VariableManager;
+import org.eclipse.sirius.web.spring.collaborative.diagrams.DiagramContext;
+import org.eclipse.sirius.web.spring.collaborative.diagrams.api.IDiagramContext;
+import org.eclipse.sirius.web.spring.collaborative.diagrams.dto.DeletionPolicy;
+import org.eclipse.sirius.web.spring.collaborative.diagrams.handlers.DeleteFromDiagramEventHandler;
 import org.eclipse.sirius.web.view.EdgeDescription;
 
 /**
@@ -77,7 +84,32 @@ public class CanonicalBehaviors {
     }
 
     public IStatus deleteElement(VariableManager variableManager) {
-        this.self(variableManager).ifPresent(this.editService::delete);
+        // @formatter:off
+        DeletionPolicy deletionPolicy = variableManager.get(DeleteFromDiagramEventHandler.DELETION_POLICY, DeletionPolicy.class)
+                .orElse(DeletionPolicy.SEMANTIC);
+        // @formatter:on
+        switch (deletionPolicy) {
+        case SEMANTIC:
+            this.self(variableManager).ifPresent(this.editService::delete);
+            break;
+        case GRAPHICAL:
+            var optionalDiagramContext = variableManager.get(IDiagramContext.DIAGRAM_CONTEXT, DiagramContext.class);
+            if (optionalDiagramContext.isPresent()) {
+                String elementId = null;
+                if (variableManager.get(Node.SELECTED_NODE, Node.class).isPresent()) {
+                    elementId = variableManager.get(Node.SELECTED_NODE, Node.class).get().getId();
+                } else if (variableManager.get(Edge.SELECTED_EDGE, Edge.class).isPresent()) {
+                    elementId = variableManager.get(Edge.SELECTED_EDGE, Edge.class).get().getId();
+                }
+                if (elementId != null) {
+                    ViewDeletionRequest viewDeletionRequest = ViewDeletionRequest.newViewDeletionRequest().elementId(elementId).build();
+                    optionalDiagramContext.get().getViewDeletionRequests().add(viewDeletionRequest);
+                }
+            }
+            break;
+        default:
+            break;
+        }
         return new Success();
     }
 
