@@ -46,7 +46,8 @@ Currently it is not possible to compute different values for width and height.
 
 - https://github.com/eclipse-sirius/sirius-components/issues/884[#884] [view] Add support for defining unsynchronized nodes and edges
 - https://github.com/eclipse-sirius/sirius-components/issues/822[#822] [diagram] Add support for graphical deletion. We can now offer a dedicated menu in the user interface to perform a graphical deletion instead of a semantic one. On the backend, the compatibility layer has been updated to perform a `DeletionViewRequest` if there is no default deletion tool and a new variable named `deletionPolicy` is available to determine if the deletion should be performed graphically or semantically
-- https://github.com/eclipse-sirius/sirius-components/issues/943[#943] Add support for optional begin & end labels on edges in views
+- https://github.com/eclipse-sirius/sirius-components/issues/943[#943] [view] Add support for optional begin & end labels on edges in views
+- https://github.com/eclipse-sirius/sirius-components/issues/822[#822] [view] Handle 'Delete from Diagram' in view-based diagrams
 
 === Improvements
 
